--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,4 +1,5 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>testCases.CookieTestRefactored.deleteSpanishCookieTakesYouBackToEnglish</td></tr>
-<tr><td>testCases.CookieTestRefactored.dropDownToLanguage</td></tr>
+<tr><td>testCases.SignUpWorkflowTest.enterBirthdate</td></tr>
+<tr><td>testCases.SignUpWorkflowTest.enterBirthdate</td></tr>
+<tr><td>testCases.SignUpWorkflowTest.enterBirthdate</td></tr>
 </table>
