--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,16 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="afa0ac">  <td>17/02/03 19:49:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:testCases.CookieTestRefactored@523884b2]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@89387388</td>   <td></td> </tr>
-<tr bgcolor="b4c3ab">  <td>17/02/03 19:49:37</td>   <td>3519</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CookieTestRefactored.setupCookies()[pri:0, instance:testCases.CookieTestRefactored@523884b2]">&gt;&gt;setupCookies</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@89387388</td>   <td></td> </tr>
-<tr bgcolor="b4c3ab">  <td>17/02/03 19:49:37</td>   <td>3523</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CookieTestRefactored.removeCookies()[pri:0, instance:testCases.CookieTestRefactored@523884b2]">&gt;&gt;removeCookies</td> 
-<td>&nbsp;</td>  <td>main@89387388</td>   <td></td> </tr>
-<tr bgcolor="b4c3ab">  <td>17/02/03 19:49:37</td>   <td>3531</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CookieTestRefactored.addLanguageCookie(org.openqa.selenium.Cookie)[pri:0, instance:testCases.CookieTestRefactored@523884b2]">addLanguageCookie</td> 
-  <td>main@89387388</td>   <td></td> </tr>
-<tr bgcolor="b4c3ab">  <td>17/02/03 19:49:38</td>   <td>3657</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CookieTestRefactored.addLanguageCookie(org.openqa.selenium.Cookie)[pri:0, instance:testCases.CookieTestRefactored@523884b2]">addLanguageCookie</td> 
-  <td>main@89387388</td>   <td></td> </tr>
-<tr bgcolor="afa0ac">  <td>17/02/03 19:49:38</td>   <td>3659</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.cleanup()[pri:0, instance:testCases.CookieTestRefactored@523884b2]">&lt;&lt;cleanup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@89387388</td>   <td></td> </tr>
+<tr bgcolor="a485d2">  <td>17/02/06 21:48:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setupBeforeClass()[pri:0, instance:testCases.SignUpWorkflowTest@26be92ad]">&gt;&gt;setupBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1454127753</td>   <td>1196765369 486898233 650023597 </td> </tr>
+<tr bgcolor="b4c3ab">  <td>17/02/06 21:48:32</td>   <td>3519</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SignUpWorkflowTest.setup()[pri:0, instance:testCases.SignUpWorkflowTest@26be92ad]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1454127753</td>   <td>1196765369 486898233 650023597 </td> </tr>
+<tr bgcolor="b4c3ab">  <td>17/02/06 21:48:32</td>   <td>3646</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUpWorkflowTest.loadPage()[pri:0, instance:testCases.SignUpWorkflowTest@1d057a39]">loadPage</td> 
+  <td>main@1454127753</td>   <td>1196765369 486898233 650023597 </td> </tr>
+<tr bgcolor="a485d2">  <td>17/02/06 21:48:36</td>   <td>7654</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setupBeforeClass()[pri:0, instance:testCases.SignUpWorkflowTest@26be92ad]">&gt;&gt;setupBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1454127753</td>   <td>1196765369 486898233 650023597 </td> </tr>
+<tr bgcolor="b4c3ab">  <td>17/02/06 21:48:38</td>   <td>9851</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SignUpWorkflowTest.setup()[pri:0, instance:testCases.SignUpWorkflowTest@26be92ad]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1454127753</td>   <td>1196765369 486898233 650023597 </td> </tr>
+<tr bgcolor="b4c3ab">  <td>17/02/06 21:48:38</td>   <td>9854</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUpWorkflowTest.loadPage()[pri:0, instance:testCases.SignUpWorkflowTest@26be92ad]">loadPage</td> 
+  <td>main@1454127753</td>   <td>1196765369 486898233 650023597 </td> </tr>
+<tr bgcolor="a485d2">  <td>17/02/06 21:48:42</td>   <td>14079</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setupBeforeClass()[pri:0, instance:testCases.SignUpWorkflowTest@26be92ad]">&gt;&gt;setupBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1454127753</td>   <td>1196765369 486898233 650023597 </td> </tr>
+<tr bgcolor="b4c3ab">  <td>17/02/06 21:48:44</td>   <td>16301</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SignUpWorkflowTest.setup()[pri:0, instance:testCases.SignUpWorkflowTest@26be92ad]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1454127753</td>   <td>1196765369 486898233 650023597 </td> </tr>
+<tr bgcolor="b4c3ab">  <td>17/02/06 21:48:44</td>   <td>16301</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUpWorkflowTest.loadPage()[pri:0, instance:testCases.SignUpWorkflowTest@475530b9]">loadPage</td> 
+  <td>main@1454127753</td>   <td>1196765369 486898233 650023597 </td> </tr>
+<tr bgcolor="b4c3ab">  <td>17/02/06 21:48:49</td>   <td>21302</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUpWorkflowTest.enterName()[pri:0, instance:testCases.SignUpWorkflowTest@1d057a39]">enterName</td> 
+  <td>main@1454127753</td>   <td>1196765369 486898233 650023597 </td> </tr>
+<tr bgcolor="b4c3ab">  <td>17/02/06 21:48:50</td>   <td>21481</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUpWorkflowTest.enterName()[pri:0, instance:testCases.SignUpWorkflowTest@26be92ad]">enterName</td> 
+  <td>main@1454127753</td>   <td>1196765369 486898233 650023597 </td> </tr>
+<tr bgcolor="b4c3ab">  <td>17/02/06 21:48:50</td>   <td>21607</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUpWorkflowTest.enterName()[pri:0, instance:testCases.SignUpWorkflowTest@475530b9]">enterName</td> 
+  <td>main@1454127753</td>   <td>1196765369 486898233 650023597 </td> </tr>
+<tr bgcolor="a485d2">  <td>17/02/06 21:48:50</td>   <td>21711</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.cleanup()[pri:0, instance:testCases.SignUpWorkflowTest@26be92ad]">&lt;&lt;cleanup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1454127753</td>   <td>1196765369 486898233 650023597 </td> </tr>
+<tr bgcolor="a485d2">  <td>17/02/06 21:48:54</td>   <td>25711</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.cleanup()[pri:0, instance:testCases.SignUpWorkflowTest@26be92ad]">&lt;&lt;cleanup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1454127753</td>   <td>1196765369 486898233 650023597 </td> </tr>
+<tr bgcolor="a485d2">  <td>17/02/06 21:48:58</td>   <td>29818</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.cleanup()[pri:0, instance:testCases.SignUpWorkflowTest@26be92ad]">&lt;&lt;cleanup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1454127753</td>   <td>1196765369 486898233 650023597 </td> </tr>
 </table>
