--- a/test-output/old/Login Tests with parameters/classes.html
+++ b/test-output/old/Login Tests with parameters/classes.html
@@ -49,4 +49,55 @@
 <td>&nbsp;</td>
 <td>cleanup</td>
 <td>&nbsp;</td></tr>
+<tr>
+<td>testCases.AmazonLoginTests</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>testGetTitle</td>
+<td>p2 </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>loadPage</td>
+<td>startup pageLoads </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>testSearch</td>
+<td>search p3 </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>testClickAcctLink</td>
+<td>p3 acctLink </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>setupBeforeClass</td>
+<td>pageLoad </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>setup</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>cleanup</td>
+<td>&nbsp;</td></tr>
 </table>
