--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,34 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a485d2">  <td>17/02/06 21:48:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.cleanup()[pri:0, instance:testCases.SignUpWorkflowTest@26be92ad]">&lt;&lt;cleanup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1454127753</td>   <td>1196765369 486898233 650023597 </td> </tr>
-<tr bgcolor="a485d2">  <td>17/02/06 21:48:54</td>   <td>4000</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.cleanup()[pri:0, instance:testCases.SignUpWorkflowTest@26be92ad]">&lt;&lt;cleanup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1454127753</td>   <td>1196765369 486898233 650023597 </td> </tr>
-<tr bgcolor="a485d2">  <td>17/02/06 21:48:58</td>   <td>8107</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.cleanup()[pri:0, instance:testCases.SignUpWorkflowTest@26be92ad]">&lt;&lt;cleanup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1454127753</td>   <td>1196765369 486898233 650023597 </td> </tr>
-<tr bgcolor="b4c3ab">  <td>17/02/06 21:48:49</td>   <td>-409</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUpWorkflowTest.enterName()[pri:0, instance:testCases.SignUpWorkflowTest@1d057a39]">enterName</td> 
-  <td>main@1454127753</td>   <td>1196765369 486898233 650023597 </td> </tr>
-<tr bgcolor="b4c3ab">  <td>17/02/06 21:48:50</td>   <td>-230</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUpWorkflowTest.enterName()[pri:0, instance:testCases.SignUpWorkflowTest@26be92ad]">enterName</td> 
-  <td>main@1454127753</td>   <td>1196765369 486898233 650023597 </td> </tr>
-<tr bgcolor="b4c3ab">  <td>17/02/06 21:48:50</td>   <td>-104</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUpWorkflowTest.enterName()[pri:0, instance:testCases.SignUpWorkflowTest@475530b9]">enterName</td> 
-  <td>main@1454127753</td>   <td>1196765369 486898233 650023597 </td> </tr>
-<tr bgcolor="b4c3ab">  <td>17/02/06 21:48:32</td>   <td>-18065</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUpWorkflowTest.loadPage()[pri:0, instance:testCases.SignUpWorkflowTest@1d057a39]">loadPage</td> 
-  <td>main@1454127753</td>   <td>1196765369 486898233 650023597 </td> </tr>
-<tr bgcolor="b4c3ab">  <td>17/02/06 21:48:38</td>   <td>-11857</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUpWorkflowTest.loadPage()[pri:0, instance:testCases.SignUpWorkflowTest@26be92ad]">loadPage</td> 
-  <td>main@1454127753</td>   <td>1196765369 486898233 650023597 </td> </tr>
-<tr bgcolor="b4c3ab">  <td>17/02/06 21:48:44</td>   <td>-5410</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUpWorkflowTest.loadPage()[pri:0, instance:testCases.SignUpWorkflowTest@475530b9]">loadPage</td> 
-  <td>main@1454127753</td>   <td>1196765369 486898233 650023597 </td> </tr>
-<tr bgcolor="b4c3ab">  <td>17/02/06 21:48:32</td>   <td>-18192</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SignUpWorkflowTest.setup()[pri:0, instance:testCases.SignUpWorkflowTest@26be92ad]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1454127753</td>   <td>1196765369 486898233 650023597 </td> </tr>
-<tr bgcolor="b4c3ab">  <td>17/02/06 21:48:38</td>   <td>-11860</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SignUpWorkflowTest.setup()[pri:0, instance:testCases.SignUpWorkflowTest@26be92ad]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1454127753</td>   <td>1196765369 486898233 650023597 </td> </tr>
-<tr bgcolor="b4c3ab">  <td>17/02/06 21:48:44</td>   <td>-5410</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SignUpWorkflowTest.setup()[pri:0, instance:testCases.SignUpWorkflowTest@26be92ad]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1454127753</td>   <td>1196765369 486898233 650023597 </td> </tr>
-<tr bgcolor="a485d2">  <td>17/02/06 21:48:28</td>   <td>-21711</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setupBeforeClass()[pri:0, instance:testCases.SignUpWorkflowTest@26be92ad]">&gt;&gt;setupBeforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1454127753</td>   <td>1196765369 486898233 650023597 </td> </tr>
-<tr bgcolor="a485d2">  <td>17/02/06 21:48:36</td>   <td>-14057</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setupBeforeClass()[pri:0, instance:testCases.SignUpWorkflowTest@26be92ad]">&gt;&gt;setupBeforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1454127753</td>   <td>1196765369 486898233 650023597 </td> </tr>
-<tr bgcolor="a485d2">  <td>17/02/06 21:48:42</td>   <td>-7632</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setupBeforeClass()[pri:0, instance:testCases.SignUpWorkflowTest@26be92ad]">&gt;&gt;setupBeforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1454127753</td>   <td>1196765369 486898233 650023597 </td> </tr>
+<tr bgcolor="a485d2">  <td>17/07/01 17:57:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.cleanup()[pri:0, instance:testCases.AmazonSearchTest@2b98378d]">&lt;&lt;cleanup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1179381257</td>   <td></td> </tr>
+<tr bgcolor="b4c3ab">  <td>17/07/01 17:57:00</td>   <td>-26438</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AmazonSearchTest.loadPage(java.lang.String)[pri:0, instance:testCases.AmazonSearchTest@2b98378d]">loadPage</td> 
+  <td>main@1179381257</td>   <td></td> </tr>
+<tr bgcolor="b4c3ab">  <td>17/07/01 17:57:00</td>   <td>-26455</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AmazonSearchTest.setup()[pri:0, instance:testCases.AmazonSearchTest@2b98378d]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1179381257</td>   <td></td> </tr>
+<tr bgcolor="a485d2">  <td>17/07/01 17:56:57</td>   <td>-30123</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setupBeforeClass()[pri:0, instance:testCases.AmazonSearchTest@2b98378d]">&gt;&gt;setupBeforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1179381257</td>   <td></td> </tr>
+<tr bgcolor="b4c3ab">  <td>17/07/01 17:57:27</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AmazonSearchTest.testGetTitle()[pri:0, instance:testCases.AmazonSearchTest@2b98378d]">testGetTitle</td> 
+  <td>main@1179381257</td>   <td></td> </tr>
 </table>
